<resources>
    <string name="app_name">回測貓</string>
    <string name="search_title">搜尋股票</string>
    <string name="share_text">
        回測貓-股市回測小幫手\n
        https://play.google.com/store/apps/details?id=studio.bluekitten.backtestingcat
    </string>
    <string name="banner_ad_unit_id">ca-app-pub-4220002976721922/5287695290</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4220002976721922/6764428495</string>
    <string name="vpon_banner_ad_unit_id">8a808182579389d40157a4ba8a731a60</string>
    <string name="vpon_interstitial_ad_unit_id">8a808182579389d40157a4bb252a1a61</string>
    <string-array name="left_drawer">
        <item>BUG 回報</item>
        <item>分享給好友</item>
        <item>幫回測貓評分</item>
        <item>服務條款</item>
        <item>隱私權政策</item>
        <item>免責聲明</item>
    </string-array>
    <string-array name="detail_drawer">
        <item>MA5</item>
        <item>MA20</item>
        <item>MA60</item>
        <item>曾氏通道</item>
        <item>布林通道</item>
    </string-array>
    <string-array name="k_bars">
        <item>紅K</item>
        <item>黑K</item>
    </string-array>
    <string-array name="macd_bars">
        <item>向上</item>
        <item>向下</item>
    </string-array>
    <string-array name="extremum">
        <item>新高</item>
        <item>新低</item>
    </string-array>
    <string-array name="changes">
        <item>漲幅</item>
        <item>跌幅</item>
    </string-array>
    <string-array name="shadows">
        <item>上影線</item>
        <item>下影線</item>
        <item>上下影線</item>
        <item>無影線</item>
        <item>十字線</item>
        <item>T字線</item>
        <item>倒T字線</item>
        <item>一字線</item>
    </string-array>
    <string-array name="measurements">
        <item>&#060;</item>
        <item>&#062;</item>
    </string-array>
    <string-array name="strategies">
        <item>K線 連續K棒</item>
        <item>K線 影線</item>
        <item>K線 漲跌幅</item>
        <item>K線 跳空</item>
        <item>K線 突破</item>
        <item>成交量 成交均量</item>
        <item>成交量 連續成交量</item>
        <item>成交量 當日爆量</item>
        <item>均線 黃金交叉</item>
        <item>均線 死亡交叉</item>
        <item>KD K值</item>
        <item>KD D值</item>
        <item>KD 黃金交叉</item>
        <item>KD 死亡交叉</item>
        <item>MACD 柱狀圖</item>
        <item>MACD 黃金交叉</item>
        <item>MACD 死亡交叉</item>
        <item>RSI RSI</item>
        <item>RSI 黃金交叉</item>
        <item>RSI 死亡交叉</item>
        <item>乖離率 乖離率</item>
        <item>布林 突破頂端</item>
        <item>布林 突破底端</item>
    </string-array>
    <string-array name="time_offsets">
        <item>近半年</item>
        <item>近一年</item>
        <item>近三年</item>
    </string-array>
    <string-array name="report_contents">
        <item>線圖顯示（此欄空白）</item>

        <item>毛利</item>
        <item>獲利因子</item>
        <item>毛損</item>

        <item>平均獲利</item>
        <item>賺賠比</item>
        <item>平均虧損</item>

        <item>獲利次數</item>
        <item>總交易次數</item>
        <item>虧損次數</item>

        <item>最大連續獲利次數</item>
        <item>最大連續虧損次數</item>

        <item>最大策略虧損</item>
        <item>報酬率</item>

        <item>備註</item>
    </string-array>
    <string-array name="tech_report_contents">
        <item>進出場資訊</item>
        <item>開盤價</item>
        <item>收盤價</item>
        <item>最高價</item>
        <item>最低價</item>
    </string-array>
    <string name="approach_str">進場</string>
    <string name="appearances_str">出場</string>
    <string name="continue_str">連續</string>
    <string name="unit_str">張</string>
    <string name="day_str">日</string>
    <string name="volume_str">成交量</string>
    <string name="volume_average_str">成交均量</string>
    <string name="profit_str">淨利</string>
    <string name="win_ratio_str">勝率</string>
    <string name="gross_profit_str">毛利</string>
    <string name="profit_factor_str">獲利因子</string>
    <string name="gross_loss_str">毛損</string>
    <string name="average_profit_str">平均獲利</string>
    <string name="profit_ratio_str">賺賠比</string>
    <string name="average_loss_str">平均虧損</string>
    <string name="profit_count_str">獲利次數</string>
    <string name="trade_count_str">總交易次數</string>
    <string name="loss_count_str">虧損次數</string>
    <string name="max_continue_profit_str">最大連續獲利次數</string>
    <string name="max_continue_loss_str">最大連續虧損次數</string>
    <string name="max_continue_loss_trade_str">最大策略虧損</string>
    <string name="percent_trading_str">報酬率</string>
    <string name="note_str">備註</string>
</resources>