<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/volume_str"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/continue_str"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:inputType="number"
        android:id="@+id/volumeContinueDays"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/day_str"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:entries="@array/measurements"
        android:id="@+id/volumeContinueMeasurement"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1000"
        android:inputType="number"
        android:id="@+id/volumeContinueVal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/unit_str"
        />

</LinearLayout>