<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/reportAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />

    <include layout="@layout/toolbar"
        android:id="@+id/reportBar"/>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reportBar"
        android:id="@+id/reportInfo"
        app:rowCount="2"
        app:columnCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:text="@string/profit_str"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_columnWeight="1"
            android:text="@string/win_ratio_str"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:id="@+id/mainProfit"
            android:text="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_columnWeight="1"
            android:id="@+id/mainPercentProfitable"
            android:text="100"/>
    </android.support.v7.widget.GridLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/reportChart"
        android:layout_below="@id/reportInfo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reportAdView"
        android:layout_below="@id/reportChart">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingBottom="20dp"
            android:id="@+id/reportDetailInfo"
            app:rowCount="12"
            app:columnCount="6">
            <TextView
                app:layout_row="0"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:text="@string/gross_profit_str"/>
            <TextView
                app:layout_row="0"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:textColor="@color/colorReportStroke"
                android:text="@string/profit_factor_str"/>
            <TextView
                app:layout_row="0"
                app:layout_column="4"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:text="@string/gross_loss_str"/>
            <TextView
                app:layout_row="1"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportGrossProfit"
                android:text="100"/>
            <TextView
                app:layout_row="1"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:textColor="@color/colorReportStroke"
                android:id="@+id/reportProfitFactor"
                android:text="100"/>
            <TextView
                app:layout_row="1"
                app:layout_column="4"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportGrossLoss"
                android:text="100"/>

            <TextView
                app:layout_row="2"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/average_profit_str"/>
            <TextView
                app:layout_row="2"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:textColor="@color/colorReportStroke"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/profit_ratio_str"/>
            <TextView
                app:layout_row="2"
                app:layout_column="4"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/average_loss_str"/>
            <TextView
                app:layout_row="3"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportAverageProfit"
                android:text="100"/>
            <TextView
                app:layout_row="3"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                android:textColor="@color/colorReportStroke"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportProfitRatio"
                android:text="100"/>
            <TextView
                app:layout_row="3"
                app:layout_column="4"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportAverageLoss"
                android:text="100"/>

            <TextView
                app:layout_row="4"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/profit_count_str"/>
            <TextView
                app:layout_row="4"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:textColor="@color/colorReportStroke"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/trade_count_str"/>
            <TextView
                app:layout_row="4"
                app:layout_column="4"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/loss_count_str"/>
            <TextView
                app:layout_row="5"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportProfitCount"
                android:text="100"/>
            <TextView
                app:layout_row="5"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                android:textColor="@color/colorReportStroke"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportTradeCount"
                android:text="100"/>
            <TextView
                app:layout_row="5"
                app:layout_column="4"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportLossCount"
                android:text="100"/>

            <TextView
                app:layout_row="6"
                app:layout_column="0"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/max_continue_profit_str"/>
            <TextView
                app:layout_row="6"
                app:layout_column="3"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/max_continue_loss_str"/>
            <TextView
                app:layout_row="7"
                app:layout_column="0"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportMaxContinueProfit"
                android:text="100"/>
            <TextView
                app:layout_row="7"
                app:layout_column="3"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportMaxContinueLoss"
                android:text="100"/>

            <TextView
                app:layout_row="8"
                app:layout_column="0"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/max_continue_loss_trade_str"/>
            <TextView
                app:layout_row="8"
                app:layout_column="3"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/percent_trading_str"/>
            <TextView
                app:layout_row="9"
                app:layout_column="0"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportMaxContinueLossTrade"
                android:text="100"/>
            <TextView
                app:layout_row="9"
                app:layout_column="3"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportPercentTrading"
                android:text="100"/>

            <TextView
                app:layout_row="10"
                app:layout_column="0"
                app:layout_columnSpan="6"
                app:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/note_str"/>
            <TextView
                app:layout_row="11"
                app:layout_column="0"
                app:layout_columnSpan="6"
                app:layout_gravity="center_horizontal"
                android:id="@+id/reportNote"
                android:text="100"/>

        </android.support.v7.widget.GridLayout>

    </ScrollView>




</RelativeLayout>