<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:inputType="number"
        android:id="@+id/volumeMADays"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/day_str"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/volume_average_str"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:entries="@array/measurements"
        android:id="@+id/volumeMAMeasurement"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="500"
        android:inputType="number"
        android:id="@+id/volumeMAVal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/unit_str"
        />
</LinearLayout>